fix: 修复 collapse-animation 组件样式问题，更新文档 🌨️🌨️🌨️

--- a/packages/fighting-theme/src/collapse-animation.scss
+++ b/packages/fighting-theme/src/collapse-animation.scss
@@ -1,4 +1,5 @@
 .f-collapse-animation {
+  height: 0;
   display: block;
   overflow: hidden;
   transition: 0.3s;
